--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                     
                     <p>I'm always eager to learn and implement the latest trends in web development and digital marketing. Let's build something amazing together!</p><br>
                   <div class="social-links">
-                      <a href="#" target="_blank">LinkedIn</a>
-                      <a href="#" target="_blank">GitHub</a>
-                      <a href="#" target="_blank">Twitter</a>
+                      <a href="https://www.linkedin.com/in/kashishtrikotiya" target="_blank">LinkedIn</a>
+                      <a href="https://github.com/kashish-trikotiya" target="_blank">GitHub</a>
+                      <a href="https://x.com/kashishtrikoti1" target="_blank">Twitter</a>
                   </div>
               </div>
           </div>
