--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p>
           I'm a Web Developer and SEO Specialist with 5+ years of experience. Currently leading the Development Team at WeConnect Soft Solution, I specialize in building high-performing websites using WordPress, HTML, CSS, and SEO
         </p>
-        <a href="#" class="btn">Download CV</a>
+        <a href="Kashish Trikotiya resume.pdf" class="btn">Download CV</a>
       </div>
     </div>
 
