--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
               <div class="about-text">
                   <h2>About Me</h2>
                   <h3>Kashish Trikotiya</h3>
-                  <p>Hi, I'm Kashish Trikotiya, a passionate Web Developer and SEO Specialist with over 5+ years of experience in the digital industry. Currently, I lead the Development Team at WeConnect Soft Solution, where I specialize in WordPress, HTML, CSS, and SEO to build high-performing websites.</p><br>
+                  <p>Hi, I’m Kashish Trikotiya — a passionate Front-End Developer and SEO Specialist with 5+ years of experience in the digital industry. I started my journey in content writing and digital marketing at WeConnect Soft Solution, where I built a strong foundation in SEO and user engagement strategies.</p><br>
 
-                    <p>Starting my career in content writing and digital marketing, I developed a strong foundation in SEO and user engagement strategies. Later, I transitioned into web development, combining my expertise in content strategy with technical skills to create seamless and optimized websites.</p><br>
+                    <p>Over the years, I transitioned into web development, mastering WordPress, HTML, and CSS to build optimized and responsive websites. In 2024, I was promoted to Team Lead at Garage2Global Ventures Pvt. Ltd., a digital marketing venture of WeConnect, where I now lead the development team in delivering high-quality, performance-driven web solutions.</p><br>
                     
                     <p>I'm always eager to learn and implement the latest trends in web development and digital marketing. Let's build something amazing together!</p><br>
                   <div class="social-links">
