--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <span class="title">Freelance Web Developer</span>
         <h1>Hello, I’m <span>Kashish Trikotiya</span></h1>
         <p>
-          I’m a Front-End Developer and SEO Specialist who builds fast, responsive, and user-friendly websites. I focus on WordPress development, clean HTML/CSS, and SEO strategies to boost online visibility.
+          I’m a Front-End Developer and SEO Specialist who builds fast, responsive, and user-friendly websites. I focus on WordPress development, clean HTML/CSS, and SEO strategies to boost online visibility.</p>
         <a href="Kashish Trikotiya resume.pdf" class="btn">Download CV</a>
       </div>
     </div>
