--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <li><a href="#experience">Experience</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
-        <a href="#" class="btn">Resume</a>
+        <a href="Kashish Trikotiya resume.pdf" class="btn">Resume</a>
       </nav>
       <div class="content">
         <span class="title">Freelance Web Developer</span>
