--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
       <div class="experience-item">
         <div class="exp-icon">💼</div>
         <h3>Team Lead - Development</h3>
-        <h4>WeConnect Soft Solution, Kota</h4>
-        <span class="date">March 2023 - Present</span>
+        <h4>Garage2Global Ventures Private Limited, Kota</h4>
+        <span class="date">June 2023 - Present</span>
         <p>
           Leading the development team, working on WordPress and front-end
           technologies, optimizing website performance, and mentoring junior
@@ -169,7 +169,7 @@
         <div class="exp-icon">💻</div>
         <h3>WordPress Developer</h3>
         <h4>WeConnect Soft Solution, Kota</h4>
-        <span class="date">April 2021 - March 2023</span>
+        <span class="date">April 2021 - May 2023</span>
         <p>
           Built and maintained responsive WordPress websites, customized themes,
           and enhanced user experience with HTML, CSS, and SEO techniques.
